# fishbait

./: .env.example  .gitignore  .gitmodules  BetSequence.h  BetSequenceTest.cpp  CMakeLists.txt  CPPLINT.cfg  GameLogic.h  GameState.h  LICENSE.txt  Makefile  README.md  abstraction.ipynb  docker-compose.dev.yml  docker-compose.prod.yml  fishbait.nginx.example  nginx.conf.example  pylintrc
ai/: CMakeLists.txt  Dockerfile  check_leaks.sh  dev_blueprint.sh
ai/src/clustering/: CMakeLists.txt  cluster_table.cc  cluster_table.h  definitions.h  distance.h  k_means.h  main.cc  matchmaker.h  test_clusters.h
ai/src/hand_strengths/: CMakeLists.txt  card_combinations.cc  card_combinations.h  definitions.h  lut_files.h  lut_generators.h  ochs.cc  ochs.h
ai/src/mccfr/: CMakeLists.txt  definitions.h  hyperparameters.h.big  hyperparameters.h.dev  main.cc  sequence_table.h  strategy.h
ai/src/poker/: CMakeLists.txt  card_utils.h  definitions.h  indexer.h  node.h
ai/src/relay/: commander.cc  commander.h  scribe.h
ai/src/utils/: array.h  cereal.h  combination_matrix.h  fraction.cc  fraction.h  loop_iterator.h  math.h  meta.h  print.h  random.h  thread.h  timer.h
ai/tests/: CMakeLists.txt
src/: .Constants.h.swp  .main.cpp.swp  Agent.cpp  Agent.h  BetSequence.h  BetSequenceTest.cpp  CMakeLists.txt  Game.cpp  Game.h  GameLogic.h  GameState.cpp  GameState.h  Regret.h  SequenceTable.cpp  SequenceTable.h  SequenceTableTest.cpp  bettest  main.cpp
src/abstraction/: .gitignore  CMakeLists.txt  OCHS.py  cluster.cpp  cpp_evaluate.cpp  cpp_experiment.cpp  experiment.py  requirements.txt
src/ai/clustering/: CMakeLists.txt  cluster_table.cc  cluster_table.h  definitions.h  distance.h  k_means.h  main.cc  matchmaker.h  test_clusters.h
src/ai/hand_strengths/: CMakeLists.txt  card_combinations.h  definitions.h  lut_files.h  lut_generators.cc  lut_generators.h  main.cc  ochs.h
src/ai/mccfr/: CMakeLists.txt  definitions.h  hyperparameters.h.big  hyperparameters.h.dev  main.cc  sequence_table.h  strategy.h
src/ai/poker/: CMakeLists.txt  card_utils.cc  card_utils.h  definitions.h  indexer.h  node.h
src/ai/relay/: CMakeLists.txt  avg_to_hd5.cc  commander.cc  commander.h  scribe.h
src/ai/utils/: CMakeLists.txt  array.h  cereal.h  combination_matrix.h  fraction.h  loop_iterator.h  math.h  meta.h  print.h  random.h  thread.h  timer.h
src/api/: CMakeLists.txt  fishbait.api.service.example  requirements.txt
src/api/src/: app.py  depot.py  depot_types.py  error.py  pigeon.py  props.py  settings.py.example  utils.py
src/blueprint/: .gitignore  CMakeLists.txt  definitions.h  hyperparameters.h  hyperparameters.h.big  hyperparameters.h.dev  main.cc  sequence_table.cc  sequence_table.h  strategy.h
src/clustering/: Array.h  CMakeLists.txt  Distance.h  EarthMoverDistance.h  KMeans.h  LoadData.h  Matrix.h  SymmetricMatrix.h  cluster_table.cc  cluster_table.h  definitions.h  distance.h  k_means.h  load_data.h  main.cc  matchmaker.h  test_clusters.h
src/deck/: CMakeLists.txt  card_combinations.cc  card_combinations.h  card_utils.cc  card_utils.h  constants.h  definitions.h  indexer.h  types.h
src/distribution_gen/: CMakeLists.txt  distribution_gen.py  distribution_gen.pyx  experiment.ipynb  requirements.txt
src/engine/: CMakeLists.txt  card_combinations.cc  card_combinations.h  card_utils.cc  card_utils.h  definitions.h  indexer.h  node.h
src/hand_evaluator/: CMakeLists.txt  Indexer.cc  Indexer.h  OMPRanker.cc  OMPRanker.h  hand_evaluator.cc  hand_evaluator.cpp
src/hand_strengths/: CMakeLists.txt  CardCombinations.cc  CardCombinations.h  Indexer.h  OCHS.h  card_combinations.cc  card_combinations.h  card_utils.cc  card_utils.h  definitions.h  indexer.h  lut_files.h  lut_generators.cc  lut_generators.h  main.cc  ochs.cc  ochs.h
src/interface/: .gitignore  CMakeLists.txt  CPPLINT.cfg  fishbait.api.service.example  fishbait.depot.service.example  fishbait.service.example  package.json  tailwind.config.js
src/interface/api/: app.py  config.ini.example  ctypes_wrappers.py  depot_types.py  error.py  pigeon.py  props.py  requirements.txt  settings.py.example
src/interface/public/: index.html  manifest.json
src/interface/src/: App.js  App.tsx  Login.css  Login.js  index.css  index.js
src/isomorphism/: CMakeLists.txt
src/lab/: .gitignore  CMakeLists.txt  requirements.txt
src/lab/src/: main.py  (+3 more)
src/omp/: CMakeLists.txt  Random.h
src/poker/: card_utils.h  definitions.h  indexer.h  node.h
src/poker_engine/: Agent.cc  Agent.cpp  Agent.h  CMakeLists.txt  Game.cc  Game.cpp  Game.h  GameState.cc  GameState.h  agent.cc  agent.h  constants.h  definitions.h  game.cc  game.h  game_state.cc  game_state.h  main.cc  main.cpp  node.h  types.h
src/relay/: CMakeLists.txt  avg_to_hd5.cc  commander.cc  commander.h  fill_db.cc  pigeon.py  scribe.h
src/scout/: CMakeLists.txt  requirements.txt
src/sequence_table/: CMakeLists.txt  Game.cc  Game.h  Regret.cc  Regret.h  SequenceTable.cc  SequenceTable.h  SequenceTableMultArray.h  main.cc  sequence_table.cc  sequence_table.h
src/utils/: CMakeLists.txt  CombinationMatrix.h  Matrix.h  VectorView.h  array.h  cereal.h  combination_matrix.h  fraction.cc  fraction.h  loop_iterator.h  math.h  matrix.h  meta.h  print.h  random.h  thread.h  timer.h  vector_view.cc  vector_view.h
tests/: CMakeLists.txt  main.cc
tests/blueprint/: sequence_table_test.cc
tests/clustering/: ArrayTest.cc  DistanceTest.cc  EarthMoverDistanceTest.cc  KMeansTest.cc  distance_test.cc  k_means_test.cc
tests/deck/: card_combinations_test.cc  card_utils_test.cc  indexer_test.cc
tests/hand_strengths/: card table.numbers  card_combinations_test.cc  card_utils_test.cc  indexer_test.cc  lut_generators_test.cc  ochs preflop compare.numbers  preflop compare.numbers  python c++ flop compare.numbers
tests/poker_engine/: node_test.cc
tests/utils/: CombinationMatrixTest.cc  GameStateTest.cc  MatrixTest.cc  VectorViewTest.cc  cereal_test.cc  combination_matrix_test.cc  fraction_test.cc  fraction_test_generator.py  loop_iterator_test.cc  matrix_test.cc  random_test.cc  vector_view_test.cc
(+138 files in other folders)
